2005-10-09 Borut Razem <borut.razem@siol.net>
	* plat/win32/fd2raw.cpp, cli/input.cc: win32_set_is_readable() not
	  needed for glib >= 2.6
	* src/sim_context.cc, src/i2c_ee.cc: fixed the p12ce518 regression
	  test problem
	* cli/socket.cc: g_io_channel_set_flags() not implemented on WIN32;
	  call it only on non-WIN32 platforms or if _DEBUG

2005-10-03 Scott Dattalo <scott@dattalo.com>
	* src/tmr0.cc, regression/tmr0_16bit/tmr0_16bit.asm: tmr0
	clear_break was getting called recursively. The tmr0 regression
	test now checks psa combinations.

2005-10-08 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/p12x.cc, src/p16x5x.cc, src/p16x5x.h, src/stimuli.cc,
	src/tmr0.cc, src/tmr0.h: Added support for clocking TMR0 from an
	external source. This applies to the 12-bit core where TMR0 is a
	dedicated pin.

2005-10-08 Borut Razem <borut.razem@siol.net>
	* src/processor.cc: fixed the "processor list" problem
	* gpsim/makefile.mingw, gpsim/gpsim.vcproj, plat/win32/gpsim.nsi,
	  doc/gpsimWin32.html: linking with libgtkextra-win32-2.1_dll.lib,
	  using gtkextra-win32-2.1.dll

2005-10-07 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: Changed version to 0.24.11

2005-09-23 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/parse.yy: Added to string_option the ability to use
	a string variable. This will apply to any command that
	uses the string_option. I specifically added it for
	module library.

2005-10-03 Scott Dattalo <scott@dattalo.com>
	* configure.ac: Changed version to 0.24.11

2005-10-03 Scott Dattalo <scott@dattalo.com>
	* src/12bit-processors.cc, src/14bit-processors.cc,
	src/14bit-tmrs.cc, src/16bit-registers.cc, src/p12x.cc,
	src/p16f62x.cc, src/p18x.cc, src/pic-processor.cc, src/tmr0.cc:
	Debug cleanups.

2005-10-03 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: More source browser preference configuration.
	* gui/gui_regwin.cc: Turned register sheet rows and columns back
	on. (They were off because of a bug in gtkextra, but that bug is